; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.c_pintr1.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcsh/extr_sh.c_pintr1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@setintr = common dso_local global i64 0, align 8
@pjobs = common dso_local global i64 0, align 8
@jobargv = common dso_local global i32 0, align 4
@ERR_NAME = common dso_local global i32 0, align 4
@ERR_INTR = common dso_local global i32 0, align 4
@InsideCompletion = common dso_local global i64 0, align 8
@ERR_SILENT = common dso_local global i32 0, align 4
@GettingInput = common dso_local global i64 0, align 8
@evalvec = common dso_local global i64 0, align 8
@doneinp = common dso_local global i32 0, align 4
@gointr = common dso_local global i64 0, align 8
@intty = common dso_local global i64 0, align 8
@editing = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pintr1(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @setintr, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %17

5:                                                ; preds = %1
  %6 = load i64, i64* @pjobs, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %5
  store i64 0, i64* @pjobs, align 8
  %9 = call i32 @xputchar(i8 signext 10)
  %10 = load i32, i32* @jobargv, align 4
  %11 = call i32 @dojobs(i32 %10, i32* null)
  %12 = load i32, i32* @ERR_NAME, align 4
  %13 = load i32, i32* @ERR_INTR, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @stderror(i32 %14)
  br label %16

16:                                               ; preds = %8, %5
  br label %17

17:                                               ; preds = %16, %1
  %18 = load i64, i64* @InsideCompletion, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i32, i32* @ERR_SILENT, align 4
  %22 = call i32 @stderror(i32 %21)
  br label %23

23:                                               ; preds = %20, %17
  %24 = call i32 (...) @Cookedmode()
  store i64 0, i64* @GettingInput, align 8
  %25 = load i64, i64* @evalvec, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  store i32 1, i32* @doneinp, align 4
  br label %28

28:                                               ; preds = %27, %23
  %29 = call i32 (...) @drainoline()
  %30 = load i64, i64* @gointr, align 8
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %28
  %33 = load i64, i64* @gointr, align 8
  %34 = call i32 @gotolab(i64 %33)
  %35 = call i32 (...) @reset()
  br label %54

36:                                               ; preds = %28
  %37 = load i64, i64* @intty, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %53

39:                                               ; preds = %36
  %40 = load i32, i32* %2, align 4
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %53

42:                                               ; preds = %39
  %43 = load i64, i64* @editing, align 8
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %49

45:                                               ; preds = %42
  %46 = call i32 (...) @PastBottom()
  %47 = call i32 (...) @ClearLines()
  %48 = call i32 (...) @ClearDisp()
  br label %52

49:                                               ; preds = %42
  %50 = call i32 @putraw(i8 signext 13)
  %51 = call i32 @putraw(i8 signext 10)
  br label %52

52:                                               ; preds = %49, %45
  br label %53

53:                                               ; preds = %52, %39, %36
  br label %54

54:                                               ; preds = %53, %32
  %55 = load i32, i32* @ERR_SILENT, align 4
  %56 = call i32 @stderror(i32 %55)
  ret void
}

declare dso_local i32 @xputchar(i8 signext) #1

declare dso_local i32 @dojobs(i32, i32*) #1

declare dso_local i32 @stderror(i32) #1

declare dso_local i32 @Cookedmode(...) #1

declare dso_local i32 @drainoline(...) #1

declare dso_local i32 @gotolab(i64) #1

declare dso_local i32 @reset(...) #1

declare dso_local i32 @PastBottom(...) #1

declare dso_local i32 @ClearLines(...) #1

declare dso_local i32 @ClearDisp(...) #1

declare dso_local i32 @putraw(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
